# kafka-test

./: .dockerignore  AGENTS.md  BENCHMARK_SUMMARY.md  README.md  run-kafka.sh
docs/: kafka-client-design.md  krafka-hardening-plan.md  krafka-idempotent-producer-concurrency-safety.md  rdkafka-vs-krafka-comparison.md  stream-sum-c-design.md  stream-sum-design.md  stream-sum-go-design.md  stream-sum-krafka-design.md  stream-sum-krafka2-design.md  stream-sum-python-design.md  stream-sum-ruby-design.md  stream-sum-rust-design.md  stream-sum-scala-design.md  streaming-performance-spec.md
docs/superpowers/plans/: 2026-05-02-kafka-test-krafka.md  2026-05-03-stream-test-krafka.md
docs/superpowers/specs/: 2026-05-02-kafka-test-krafka-design.md  2026-05-03-stream-test-krafka-design.md
kafka-test-java/: .gitignore  Dockerfile  Makefile  build.gradle  settings.gradle
kafka-test-java/src/main/java/com/example/kafka/: Consumer.java  Producer.java
kafka-test-krafka/: Cargo.toml  Dockerfile  Makefile  README.md
kafka-test-krafka/src/: consumer.rs  producer.rs
kafka-test-python/: Dockerfile  Makefile  consumer.py  producer.py  pyproject.toml
kafka-test-ruby/: .dockerignore  .gitignore  Dockerfile  Gemfile  Makefile  README.md  consumer.rb  producer.rb
kafka-test-rust/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile
kafka-test-rust/src/: consumer.rs  producer.rs
kafka-test-scala/: .gitignore  Dockerfile  Makefile  build.sbt
kafka-test-scala/src/main/scala/: Consumer.scala  Producer.scala
schemas/: integer_list.avsc  message.avsc  sum_result.avsc
stream-test-c/: Dockerfile  Makefile  benchmark_result.txt  stream-test-c
stream-test-c/src/: main.c
stream-test-go/: Dockerfile  Makefile  benchmark_result.txt  go.mod
stream-test-go/cmd/consumer/: main.go
stream-test-go/cmd/processor/: main.go
stream-test-go/cmd/producer/: main.go
stream-test-java/: Dockerfile  Makefile  benchmark_result.txt  build.gradle  settings.gradle
stream-test-java/src/main/java/com/example/kafka/: KafkaLagMonitor.java  StreamSumApp.java  StreamSumBenchmark.java  TestConsumer.java  TestProducer.java
stream-test-java/src/main/java/com/example/kafka/model/: SumResult.java
stream-test-java/src/main/resources/: logback.xml
stream-test-krafka/: Cargo.toml  Dockerfile  Makefile
stream-test-krafka2/: Cargo.toml  Dockerfile  Makefile
stream-test-python/: Dockerfile  Makefile  pyproject.toml
stream-test-ruby/: Dockerfile  Gemfile  Makefile
stream-test-rust/: Cargo.toml  Dockerfile  Makefile  benchmark_result.txt
stream-test-rust/src/: main.rs
stream-test-scala/: Dockerfile  Makefile  build.sbt
stream-test-scala/src/main/resources/: logback.xml
stream-test-scala/src/main/scala/com/example/kafka/: StreamSumApp.scala  TestConsumer.scala  TestProducer.scala
