[package]
name = "kafka-test-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
rdkafka = { version = "0.39.0", features = ["dynamic-linking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = {version = "1.49.0", features = ["full"]}
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[[bin]]
name = "kafka-producer"
path = "src/producer.rs"

[[bin]]
name = "kafka-consumer"
path = "src/consumer.rs"
