[package]
name = "stream-test-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = { version = "0.36.2", features = ["cmake-build", "libz"] }
apache-avro = "0.16.0"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.201", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
futures = "0.3.30"
lazy_static = "1.4.0"
rand = { version = "0.8.5", features = ["small_rng"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
